# scorekeep-backend

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  docker-compose.yaml
.config/: nextest.toml
.github/workflows/: ci.yml
migrations/: 20250612093131_init_database.sql
queries/: get_all_games.sql
src/: api.rs  error.rs  game.rs  lib.rs
src/auth/: api.rs  mod.rs
src/games/: api.rs  mod.rs
tests/: api.rs  games.rs
