[package]
name = "scorekeep"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.45.1", features = ["full"]}
uuid = {version = "1.17.0",features = ["serde"]}
chrono = {version = "0.4.41",features = ["serde"]}
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
rand = "0.9.1"

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "postgres",
    "macros"
]
