[package]
name = "scorekeep"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "bin/app.rs"

[dependencies]
tokio = {version = "1.45.1", features = ["full"]}
uuid = {version = "1.17.0",features = ["serde"]}
http = "1.3.1"
tracing = "0.1.41"
dotenv = "0.15.0"
tracing-subscriber = "0.3.19"
chrono = {version = "0.4.41",features = ["serde"]}
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.1"
poem = { version = "3.1.11", features = ["server", "rustls", "test"] }
poem-openapi = { version = "5.1.15", features = ["email", "scalar", "uuid", "chrono"] }

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "postgres",
    "macros"
]
